# RecallSense

./: .gitignore  MODELS_RESULTS.md  README.md  app.py  config.py  download_blip.py  embedding_models.py  index_images.py  main.py  pyproject.toml  search_engine.py  search_images.py
embeddings_data/: embeddings_gemma.npy  embeddings_gte.npy  embeddings_qwen.npy  metadata.json
static/: app.js  index.html  style.css
